#
# Packaging
#

[tool.poetry]
name = "pyrobud"
version = "1.2.0"
description = "A clean selfbot for Telegram with an emphasis on quality and practicality."
authors = ["Danny Lin <danny@kdrag0n.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdrag0n/pyrobud"
documentation = "https://github.com/kdrag0n/pyrobud/blob/master/README.md"

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kdrag0n/pyrobud/issues"
"Community" = "https://t.me/pyrobud"

[tool.poetry.dependencies]
python = "^3.6"

# Core
aiohttp = "^3.6.2"
colorlog = "^4.0.2"
telethon = "^1.10.9"
tomlkit = "^0.5.8"
# Performance
cryptg = "^0.2.post0"
uvloop = {version = "^0.14.0", optional = true}
# Database
msgpack = "^0.6.2"
plyvel = "^1.1.0"
# Error handling
gitpython = "^3.0.5"
ratelimit = "^2.2.1"
sentry-sdk = "^0.13.5"
# Stickers module
pillow = "^6.2.1"
# System module
speedtest-cli = "^2.1.2"
# Debug module
meval = "^2.5"
aiorun = "^2019.11.1"
beauty-print = {git = "https://github.com/kdrag0n/bprint.git", branch = "attr-skip-lists"}

[tool.poetry.extras]
fast = ["uvloop"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
mypy = "^0.750"
pre-commit = "^1.20.0"

[tool.poetry.scripts]
pyrobud = "pyrobud.main:main"


#
# Code formatting
#

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120


#
# Build system (for pip)
#

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
