[metadata]
name = pyrobud
author = Danny Lin
author-email = danny@kdrag0n.dev
summary = A clean selfbot for Telegram with an emphasis on quality and practicality.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/kdrag0n/pyrobud
project_urls =
    Bug Tracker = https://github.com/kdrag0n/pyrobud/issues
    Documentation = https://github.com/kdrag0n/pyrobud/blob/master/README.md
    Source Code = https://github.com/kdrag0n/pyrobud
    Community = https://t.me/pyrobud
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Framework :: AsyncIO
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Communications
    Topic :: Communications :: Chat
keywords =
    chat
    telegram
    selfbot
    telegram-bot
    telethon

[entry_points]
console_scripts =
    pyrobud = pyrobud.launch:main
